--- a/estimate_metalinks.ipynb
+++ b/estimate_metalinks.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,9 +319,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using `.X`!\n",
+      "Converting mat to CSR format\n",
+      "Transforming metabolite using neg_to_zero\n",
+      "Using `.X`!\n",
+      "Using `.X`!\n",
+      "Using provided `resource`.\n",
+      "0.98 of entities in the resource are missing from the data.\n",
+      "Generating ligand-receptor stats for 700 samples and 860 features\n",
+      "Assuming that counts were `natural` log-normalized!\n",
+      "Running CellPhoneDB\n",
+      "Running Connectome\n",
+      "Running log2FC\n",
+      "Running NATMI\n",
+      "Running SingleCellSignalR\n",
+      "Running CellChat\n"
+     ]
+    }
+   ],
    "source": [
     "li.mt.rank_aggregate(mdata, groupby='bulk_labels',\n",
     "                     multi_kwargs=dict(x_mod='metabolite', y_mod='rna',\n",
@@ -333,9 +355,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>source</th>\n",
+       "      <th>target</th>\n",
+       "      <th>ligand_complex</th>\n",
+       "      <th>receptor_complex</th>\n",
+       "      <th>lr_means</th>\n",
+       "      <th>expr_prod</th>\n",
+       "      <th>scaled_weight</th>\n",
+       "      <th>lr_logfc</th>\n",
+       "      <th>spec_weight</th>\n",
+       "      <th>lrscore</th>\n",
+       "      <th>lr_probs</th>\n",
+       "      <th>magnitude_rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>CD4+/CD45RO+ Memory</td>\n",
+       "      <td>CD4+/CD45RA+/CD25- Naive T</td>\n",
+       "      <td>HMDB0000123</td>\n",
+       "      <td>CXCR4</td>\n",
+       "      <td>0.768593</td>\n",
+       "      <td>0.273871</td>\n",
+       "      <td>0.883349</td>\n",
+       "      <td>0.745058</td>\n",
+       "      <td>0.068262</td>\n",
+       "      <td>0.479293</td>\n",
+       "      <td>0.004321</td>\n",
+       "      <td>0.000036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>CD14+ Monocyte</td>\n",
+       "      <td>CD4+/CD45RA+/CD25- Naive T</td>\n",
+       "      <td>HMDB0000123</td>\n",
+       "      <td>CXCR4</td>\n",
+       "      <td>0.721617</td>\n",
+       "      <td>0.148773</td>\n",
+       "      <td>0.663560</td>\n",
+       "      <td>0.628908</td>\n",
+       "      <td>0.037081</td>\n",
+       "      <td>0.404200</td>\n",
+       "      <td>0.001795</td>\n",
+       "      <td>0.005583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>CD4+/CD45RO+ Memory</td>\n",
+       "      <td>CD8+/CD45RA+ Naive Cytotoxic</td>\n",
+       "      <td>HMDB0000123</td>\n",
+       "      <td>CXCR4</td>\n",
+       "      <td>0.589145</td>\n",
+       "      <td>0.200051</td>\n",
+       "      <td>0.648027</td>\n",
+       "      <td>0.519143</td>\n",
+       "      <td>0.049862</td>\n",
+       "      <td>0.440306</td>\n",
+       "      <td>0.003105</td>\n",
+       "      <td>0.020353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>CD56+ NK</td>\n",
+       "      <td>CD14+ Monocyte</td>\n",
+       "      <td>HMDB0001341</td>\n",
+       "      <td>P2RY13</td>\n",
+       "      <td>0.697882</td>\n",
+       "      <td>0.237026</td>\n",
+       "      <td>0.682175</td>\n",
+       "      <td>0.731639</td>\n",
+       "      <td>0.099824</td>\n",
+       "      <td>0.461297</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.023357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>CD14+ Monocyte</td>\n",
+       "      <td>CD8+/CD45RA+ Naive Cytotoxic</td>\n",
+       "      <td>HMDB0000123</td>\n",
+       "      <td>CXCR4</td>\n",
+       "      <td>0.542169</td>\n",
+       "      <td>0.108673</td>\n",
+       "      <td>0.428237</td>\n",
+       "      <td>0.402993</td>\n",
+       "      <td>0.027086</td>\n",
+       "      <td>0.367017</td>\n",
+       "      <td>0.001289</td>\n",
+       "      <td>0.042129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>CD19+ B</td>\n",
+       "      <td>CD19+ B</td>\n",
+       "      <td>HMDB0000123</td>\n",
+       "      <td>CXCR4</td>\n",
+       "      <td>0.133630</td>\n",
+       "      <td>0.009516</td>\n",
+       "      <td>-0.224411</td>\n",
+       "      <td>-0.406387</td>\n",
+       "      <td>0.002372</td>\n",
+       "      <td>0.146451</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>CD8+ Cytotoxic T</td>\n",
+       "      <td>CD56+ NK</td>\n",
+       "      <td>HMDB0000123</td>\n",
+       "      <td>CXCR4</td>\n",
+       "      <td>0.243890</td>\n",
+       "      <td>0.026961</td>\n",
+       "      <td>-0.044037</td>\n",
+       "      <td>-0.091241</td>\n",
+       "      <td>0.006720</td>\n",
+       "      <td>0.224087</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>CD8+/CD45RA+ Naive Cytotoxic</td>\n",
+       "      <td>CD56+ NK</td>\n",
+       "      <td>HMDB0000123</td>\n",
+       "      <td>CXCR4</td>\n",
+       "      <td>0.264828</td>\n",
+       "      <td>0.044726</td>\n",
+       "      <td>0.053929</td>\n",
+       "      <td>-0.065919</td>\n",
+       "      <td>0.011148</td>\n",
+       "      <td>0.271125</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>CD8+/CD45RA+ Naive Cytotoxic</td>\n",
+       "      <td>CD8+ Cytotoxic T</td>\n",
+       "      <td>HMDB0000123</td>\n",
+       "      <td>CXCR4</td>\n",
+       "      <td>0.405512</td>\n",
+       "      <td>0.074391</td>\n",
+       "      <td>0.238417</td>\n",
+       "      <td>0.359093</td>\n",
+       "      <td>0.018542</td>\n",
+       "      <td>0.324200</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>Dendritic</td>\n",
+       "      <td>Dendritic</td>\n",
+       "      <td>HMDB0000123</td>\n",
+       "      <td>CXCR4</td>\n",
+       "      <td>0.331748</td>\n",
+       "      <td>0.024179</td>\n",
+       "      <td>0.029330</td>\n",
+       "      <td>0.092172</td>\n",
+       "      <td>0.006027</td>\n",
+       "      <td>0.214762</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>130 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           source                        target  \\\n",
+       "12            CD4+/CD45RO+ Memory    CD4+/CD45RA+/CD25- Naive T   \n",
+       "15                 CD14+ Monocyte    CD4+/CD45RA+/CD25- Naive T   \n",
+       "42            CD4+/CD45RO+ Memory  CD8+/CD45RA+ Naive Cytotoxic   \n",
+       "83                       CD56+ NK                CD14+ Monocyte   \n",
+       "45                 CD14+ Monocyte  CD8+/CD45RA+ Naive Cytotoxic   \n",
+       "..                            ...                           ...   \n",
+       "96                        CD19+ B                       CD19+ B   \n",
+       "113              CD8+ Cytotoxic T                      CD56+ NK   \n",
+       "114  CD8+/CD45RA+ Naive Cytotoxic                      CD56+ NK   \n",
+       "34   CD8+/CD45RA+ Naive Cytotoxic              CD8+ Cytotoxic T   \n",
+       "129                     Dendritic                     Dendritic   \n",
+       "\n",
+       "    ligand_complex receptor_complex  lr_means  expr_prod  scaled_weight  \\\n",
+       "12     HMDB0000123            CXCR4  0.768593   0.273871       0.883349   \n",
+       "15     HMDB0000123            CXCR4  0.721617   0.148773       0.663560   \n",
+       "42     HMDB0000123            CXCR4  0.589145   0.200051       0.648027   \n",
+       "83     HMDB0001341           P2RY13  0.697882   0.237026       0.682175   \n",
+       "45     HMDB0000123            CXCR4  0.542169   0.108673       0.428237   \n",
+       "..             ...              ...       ...        ...            ...   \n",
+       "96     HMDB0000123            CXCR4  0.133630   0.009516      -0.224411   \n",
+       "113    HMDB0000123            CXCR4  0.243890   0.026961      -0.044037   \n",
+       "114    HMDB0000123            CXCR4  0.264828   0.044726       0.053929   \n",
+       "34     HMDB0000123            CXCR4  0.405512   0.074391       0.238417   \n",
+       "129    HMDB0000123            CXCR4  0.331748   0.024179       0.029330   \n",
+       "\n",
+       "     lr_logfc  spec_weight   lrscore  lr_probs  magnitude_rank  \n",
+       "12   0.745058     0.068262  0.479293  0.004321        0.000036  \n",
+       "15   0.628908     0.037081  0.404200  0.001795        0.005583  \n",
+       "42   0.519143     0.049862  0.440306  0.003105        0.020353  \n",
+       "83   0.731639     0.099824  0.461297  0.000000        0.023357  \n",
+       "45   0.402993     0.027086  0.367017  0.001289        0.042129  \n",
+       "..        ...          ...       ...       ...             ...  \n",
+       "96  -0.406387     0.002372  0.146451  0.000000        1.000000  \n",
+       "113 -0.091241     0.006720  0.224087  0.000000        1.000000  \n",
+       "114 -0.065919     0.011148  0.271125  0.000000        1.000000  \n",
+       "34   0.359093     0.018542  0.324200  0.000000        1.000000  \n",
+       "129  0.092172     0.006027  0.214762  0.000000        1.000000  \n",
+       "\n",
+       "[130 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mdata.uns['liana_res']"
    ]
