enable verbosity + _handle_mdata to bivar

--- a/estimate_metalinks.ipynb
+++ b/estimate_metalinks.ipynb
@@ -265,7 +265,6 @@
    "outputs": [],
    "source": [
     "# dc.run_ulm(adata, net=met_net, source='HMDB', target='GENE', weight='direction', use_raw=False, min_n=2)\n",
-    "\n",
     "dc.run_wmean(adata, net=met_net, source='HMDB', target='GENE', weight='direction', use_raw=False, min_n=2, times=0)"
    ]
   },
@@ -353,17 +352,19 @@
     }
    ],
    "source": [
-    "li.mt.cellphonedb(mdata, groupby='louvain',\n",
-    "                     multi_kwargs=dict(x_mod='metabolite', y_mod='rna',\n",
-    "                                       x_transform = neg_to_zero,\n",
-    "                                       y_transform = False),\n",
-    "                     n_perms=None, use_raw=False, verbose=True,\n",
-    "                     resource=resource)"
+    "li.mt.cellphonedb(mdata,\n",
+    "                  groupby='louvain',\n",
+    "                  multi_kwargs=dict(x_mod='metabolite', y_mod='rna',\n",
+    "                                    x_transform = neg_to_zero,\n",
+    "                                    y_transform = False),\n",
+    "                  n_perms=None, use_raw=False, verbose=True,\n",
+    "                  resource=resource\n",
+    "                  )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +604,7 @@
        "[3936 rows x 11 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
