mutli_kwargs to mdata_kwargs + fix test issue

--- a/estimate_metalinks.ipynb
+++ b/estimate_metalinks.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -328,6 +328,7 @@
      "output_type": "stream",
      "text": [
       "Using `.X`!\n",
+      "Converting mat to CSR format\n",
       "Transforming metabolite using neg_to_zero\n",
       "Using `.X`!\n",
       "Using `.X`!\n",
@@ -354,7 +355,7 @@
    "source": [
     "li.mt.cellphonedb(mdata,\n",
     "                  groupby='louvain',\n",
-    "                  multi_kwargs=dict(x_mod='metabolite', y_mod='rna',\n",
+    "                  mdata_kwargs=dict(x_mod='metabolite', y_mod='rna',\n",
     "                                    x_transform = neg_to_zero,\n",
     "                                    y_transform = False),\n",
     "                  n_perms=None, use_raw=False, verbose=True,\n",
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +605,7 @@
        "[3936 rows x 11 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
