--- a/targeted.ipynb
+++ b/targeted.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypothesis-testing for CCC across Conditions"
+    "# Hypothesis-testing for CCC across Conditions & Downstream Signalling Networks"
    ]
   },
   {
