minor text improvement

--- a/targeted.ipynb
+++ b/targeted.ipynb
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -968,24 +968,27 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8760777872315)>"
+       "<ggplot: (8760678040453)>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "plot = li.pl.dotplot(liana_res=lr_res,\n",
+    "                     colour='interaction_stat',\n",
+    "                     size='ligand_pvalue',\n",
+    "                     inverse_size=True,\n",
+    "                     orderby='interaction_stat',\n",
+    "                     orderby_ascending=False,\n",
+    "                     top_n=10,\n",
+    "                     size_range=(1, 5))\n",
+    "\n",
+    "# customize plot\n",
     "(\n",
-    "    li.pl.dotplot(liana_res=lr_res, \n",
-    "                  colour='interaction_stat',\n",
-    "                  size='ligand_pvalue',\n",
-    "                  inverse_size=True,\n",
-    "                  orderby='interaction_stat', \n",
-    "                  orderby_ascending=False, \n",
-    "                  top_n=10, \n",
-    "                  size_range=(1, 5))\n",
+    "    plot\n",
     "    + p9.theme_bw(base_size=14)\n",
     "    # fill cmap blue to red\n",
     "    + p9.scale_color_cmap('RdBu_r')\n",
@@ -2131,12 +2134,6 @@
    "source": [
     "In this example, we represent the directionality of signalling such that intracellular signalling is downstream of intercellular communication events. However, in biology cellular response is an admixture of both; such approaches are a simplification of the biological reality."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
