--- a/targeted.ipynb
+++ b/targeted.ipynb
@@ -1968,7 +1968,7 @@
     }
    ],
    "source": [
-    "df_res, problem = li.fun.search_causalnet(\n",
+    "df_res, problem = li.fun.find_causalnet(\n",
     "    prior_graph, \n",
     "    input_scores, \n",
     "    output_scores, \n",
@@ -2221,9 +2221,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "spiana",
    "language": "python",
-   "name": "python3"
+   "name": "spiana"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2235,7 +2235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
