re-run tutos with new API

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -50,7 +50,16 @@
    "execution_count": 1,
    "id": "af4eca31-878c-41ed-85be-d249d03be71b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_bivariate_funs.py:9: NumbaPerformanceWarning: np.dot() is faster on contiguous arrays, called on (array(float32, 1d, C), array(float32, 1d, A))\n",
+      "  dot = np.dot(x * w, y)\n"
+     ]
+    }
+   ],
    "source": [
     "# import liana\n",
     "import liana as li\n",
@@ -628,7 +637,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 268.91it/s]\n"
+      "100%|██████████| 1000/1000 [00:05<00:00, 192.52it/s]\n"
      ]
     }
    ],
@@ -881,7 +890,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8756742213182)>"
+       "<ggplot: (8790629797693)>"
       ]
      },
      "execution_count": 13,
@@ -956,7 +965,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8756738435057)>"
+       "<ggplot: (8790629729314)>"
       ]
      },
      "execution_count": 14,
@@ -1014,7 +1023,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 276.48it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 293.81it/s]\n"
      ]
     },
     {
@@ -1032,7 +1041,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 276.93it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 274.73it/s]\n"
      ]
     }
    ],
@@ -1285,7 +1294,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8756738305730)>"
+       "<ggplot: (8790617609553)>"
       ]
      },
      "execution_count": 18,
@@ -1339,7 +1348,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8756738072510)>"
+       "<ggplot: (8790617427452)>"
       ]
      },
      "execution_count": 19,
@@ -1437,7 +1446,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8756733036463)>"
+       "<ggplot: (8790617468709)>"
       ]
      },
      "execution_count": 22,
