--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -357,16 +357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "comps = li.fun.obsm_to_adata(adata, 'compositions')"
+    "comps = li.ut.obsm_to_adata(adata, 'compositions')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:03<00:00,  3.06s/it]\n"
+      "100%|██████████| 1/1 [00:03<00:00,  3.34s/it]\n"
      ]
     }
    ],
@@ -455,17 +455,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# extract progeny activities as an AnnData object\n",
-    "acts_progeny = li.fun.obsm_to_adata(adata, 'mlm_estimate')"
+    "acts_progeny = li.ut.obsm_to_adata(adata, 'mlm_estimate')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "      obsp:\t'spatial_connectivities'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,14 +595,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: vSMCs: 100%|██████████| 11/11 [00:29<00:00,  2.71s/it]  \n"
+      "Now learning: vSMCs: 100%|██████████| 11/11 [00:32<00:00,  2.96s/it]  \n"
      ]
     }
    ],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
        "4  Lymphoid  0.108310  0.139884  0.031574  0.541284  0.142692  0.316024"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -756,10 +756,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8735834744977)>"
+       "<ggplot: (8730898217930)>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -794,10 +794,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8735830210065)>"
+       "<ggplot: (8730890459158)>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -832,10 +832,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8735837793749)>"
+       "<ggplot: (8730898216994)>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
        "4  Adipo      Mast  intra     0.131783"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -964,10 +964,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8735834624886)>"
+       "<ggplot: (8730897887566)>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,14 +998,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: vSMCs: 100%|██████████| 11/11 [00:04<00:00,  2.26it/s]  \n"
+      "Now learning: vSMCs: 100%|██████████| 11/11 [00:04<00:00,  2.35it/s]  \n"
      ]
     }
    ],
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1039,10 +1039,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8735830230476)>"
+       "<ggplot: (8730905916302)>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1077,10 +1077,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8735837901389)>"
+       "<ggplot: (8730897732810)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1119,10 +1119,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8735834666873)>"
+       "<ggplot: (8730898288746)>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
        "[3838548 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
        "[7318 rows x 3 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1470,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4113/4113 [00:36<00:00, 113.31it/s]\n",
+      "100%|██████████| 4113/4113 [00:10<00:00, 391.70it/s]\n",
       "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/internals/blocks.py:351: RuntimeWarning: divide by zero encountered in log10\n"
      ]
     }
@@ -1488,16 +1488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "acts_msigdb = li.fun.obsm_to_adata(adata, 'ora_estimate')"
+    "acts_msigdb = li.ut.obsm_to_adata(adata, 'ora_estimate')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1518,13 +1518,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate spatial neighbors\n",
-    "# NOTE: move spatial_neighbors to fun?\n",
-    "li.mt.spatial_neighbors(acts_msigdb, cutoff=0.1, bandwidth=200, set_diag=False)"
+    "li.ut.spatial_neighbors(acts_msigdb, cutoff=0.1, bandwidth=200, set_diag=False)"
    ]
   },
   {
@@ -1537,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1555,10 +1554,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8735837791302)>"
+       "<ggplot: (8730897709609)>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1650,7 @@
        "      obsp:\t'spatial_connectivities'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,14 +1669,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: vSMCs: 100%|██████████| 11/11 [00:05<00:00,  2.08it/s]  \n"
+      "Now learning: vSMCs: 100%|██████████| 11/11 [00:05<00:00,  2.12it/s]  \n"
      ]
     }
    ],
@@ -1695,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1711,10 +1710,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8735834762319)>"
+       "<ggplot: (8730898485492)>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1749,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1784,14 +1783,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: CSF3R: 100%|██████████| 89/89 [00:34<00:00,  2.61it/s]      \n"
+      "Now learning: CSF3R: 100%|██████████| 89/89 [00:35<00:00,  2.50it/s]      \n"
      ]
     }
    ],
@@ -1809,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1827,10 +1826,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8735834726292)>"
+       "<ggplot: (8730898227999)>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1862,6 +1861,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-info\">\n",
+    "  While MISTy provides a flexible framework for the inference of spatially-informed interactions, it only summarizes relationships between the variables on the level of the whole slide (or niche); one should thus consider  <a href=\"https://liana-py.readthedocs.io/en/latest/notebooks/bivariate.html\"> LIANA+'s bivariate local functions</a>. These are simple spatially-informed spatially-informed metrics calculated at the spot-/cell-level. Thus, one can use them to visualize and explore the local distribution of interactions with spatial context.\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Citing MISTy:\n",
     "\n",
     "If you use MISTy via LIAAN+, please cite MISTy's original publication ([Tanevski et al., 2022](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-022-02663-5))"
@@ -1873,16 +1882,6 @@
    "metadata": {},
    "source": [
     "Simiarly, consider citing any other database or method that you used in your analysis!"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\">\n",
-    "  While MISTy provides a flexible framework for the inference of spatially-informed interactions, it only summarizes relationships between the variables on the level of the whole slide (or niche); one should thus consider  <a href=\"https://liana-py.readthedocs.io/en/latest/notebooks/bivariate.html\"> LIANA+'s bivariate local functions</a>. These are simple spatially-informed spatially-informed metrics calculated at the spot-/cell-level. Thus, one can use them to visualize and explore the local distribution of interactions with spatial context.\n",
-    "</div>"
    ]
   }
  ],
