move targeted tuto

--- a/docs/source/notebooks/targeted.ipynb
+++ b/docs/source/notebooks/targeted.ipynb
@@ -1032,7 +1032,7 @@
     "\n",
     "* Use CORNETO to identify a solution in the form of a [causal (smallest sign-consistent signaling) network](https://www.nature.com/articles/s41540-019-0118-z) that explains the measured inputs and outputs\n",
     "\n",
-    "![Causal network overview](docs/source/notebooks/causal-networks.png)\n",
+    "![Causal network overview](causal-networks.png)\n",
     "\n",
     "\n"
    ]
@@ -2230,7 +2230,7 @@
   "kernelspec": {
    "display_name": "spiana",
    "language": "python",
-   "name": "spiana"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
